--- a/index.html
+++ b/index.html
@@ -30,20 +30,20 @@
 <header>
 	<nav>
 		<ul id="navigation">
-			<a href="file:///C:/Users/xijak/Desktop/agr.uni/index.html" class="logo1">
+			<a href="https://giga12.github.io/home/" class="logo1">
 				<img class="logo"  src="logo1.png">
 			</a>
-			<a href="file:///C:/Users/xijak/Desktop/agr.uni/index.html"  class="nav">HOME</a>
-			<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-13/index.html"   class="nav"  class="nav-link scroll">ABOUT US</a>
+			<a href="https://giga12.github.io/home/"  class="nav">HOME</a>
+			<a href="https://giga12.github.io/13/"   class="nav"  class="nav-link scroll">ABOUT US</a>
 			<div class="dropdown">
-  		  	<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-12/index.html" class="nav" class="nav-link scroll">PRODUCT</a>
+  		  	<a href="https://giga12.github.io/12/" class="nav" class="nav-link scroll">PRODUCT</a>
  	      	<div class="dropdown-content">
- 	        	<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-14/index.html">NUCLEIC ACID AMPLIFICATION</a>
- 			    <a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-15/index.html">NUCLEIC ACID PURIFICATION</a>
+ 	        	<a href="https://giga12.github.io/14/">NUCLEIC ACID AMPLIFICATION</a>
+ 			    <a href="https://giga12.github.io/15/">NUCLEIC ACID PURIFICATION</a>
  			</div>
 			</div>
-  			<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-11/index.html" class="nav" class="nav-link scroll">SERVICES</a>
-			<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-10/index.html" class="nav" class="nav-link scroll" style="margin-right: 10%">CONTACT</a>
+  			<a href="https://giga12.github.io/11/" class="nav" class="nav-link scroll">SERVICES</a>
+			<a href="https://giga12.github.io/10/" class="nav" class="nav-link scroll" style="margin-right: 10%">CONTACT</a>
     		<div class="burger-mum">
     			<div class="burger" onclick="openNav()">
     				<div class="bar"></div>
@@ -58,17 +58,17 @@
 
 <div id="mySidenav" class="sidenav">
   <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-  <a href="file:///C:/Users/xijak/Desktop/agr.uni/index.html">HOME</a>
-  <a href="#about" class="nav-link scroll" >ABOUT US</a>
+  <a href="https://giga12.github.io/home/">HOME</a>
+  <a href="https://giga12.github.io/13/" class="nav-link scroll" >ABOUT US</a>
   <div class="dropdown">
   <a style="color: white" class="nav-link scroll" id="product">PRODUCT</a>
     <div class="dropdown-content">
-      <a href="#amp" id="nuc">NUCLEIC ACID AMPLIFICATION</a>
-      <a href="#pur" id="nuc">NUCLEIC ACID PURIFICATION</a>
+      <a href="https://giga12.github.io/14/" id="nuc">NUCLEIC ACID AMPLIFICATION</a>
+      <a href="https://giga12.github.io/15/" id="nuc">NUCLEIC ACID PURIFICATION</a>
     </div>
   </div>
-  <a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-11/index.html"  class="nav-link scroll">SERVICES</a>
-  <a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-10/index.html"  class="nav-link scroll" style="margin-right: 10%">CONTACT</a>
+  <a href="https://giga12.github.io/11/"  class="nav-link scroll">SERVICES</a>
+  <a href="https://giga12.github.io/10/"  class="nav-link scroll" style="margin-right: 10%">CONTACT</a>
 </div>
 
 <main>
@@ -78,7 +78,7 @@
 		</header>
 	</div>
 	<div class="catalog">
-		<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-6/index.html" class="product-div">
+		<a href="https://giga12.github.io/6/">
 				<div class="product-img-mum">
 					<div class="inner">
 						<div class="product-hover">
@@ -93,7 +93,7 @@
 					Plant DNA Purification
 				</p>
 			</a>
-		<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-7/index.html" class="product-div">
+		<a href="https://giga12.github.io/7/">
 				<div class="product-img-mum">
 					<div class="inner">
 						<div class="product-hover">
@@ -108,7 +108,7 @@
 					Bacterial DNA Purification
 				</p>
 			</a>
-		<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-8/index.html" class="product-div">
+		<a href="https://giga12.github.io/8/">
 				<div class="product-img-mum">
 					<div class="inner">
 						<div class="product-hover">
@@ -123,7 +123,7 @@
 					PCR Fragment Purification
 				</p>
 			</a>
-		<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-9/index.html" class="product-div">
+		<a href="https://giga12.github.io/9/">
 				<div class="product-img-mum">
 					<div class="inner">
 						<div class="product-hover">
@@ -138,7 +138,7 @@
 					Blood DNA Purification
 				</p>
 			</a>
-		<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-16/index.html" class="product-div">
+		<a href="https://giga12.github.io/16/">
 				<div class="product-img-mum">
 					<div class="inner">
 						<div class="product-hover">
@@ -153,7 +153,7 @@
 					Phage DNA Purification Kit
 				</p>
 			</a>
-		<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-17/index.html" class="product-div">
+		<a href="https://giga12.github.io/17/">
 				<div class="product-img-mum">
 					<div class="inner">
 						<div class="product-hover">
@@ -169,7 +169,7 @@
 				</p>
 			</a>
 
-		<a href="file:///C:/Users/xijak/Desktop/agr.uni/agr-uni-18/index.html" class="product-div">
+		<a href="https://giga12.github.io/18/">
 				<div class="product-img-mum">
 					<div class="inner">
 						<div class="product-hover">
